--- a/index.html
+++ b/index.html
@@ -1,19 +1,29 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>My GitHub Pages Site</title>
+  <title>BIMM143 Documents</title>
 </head>
 <body>
-  <h1>Welcome to My Site</h1>
-  <p>Below are all the documents in this repository:</p>
+  <h1>Welcome to My BIMM143 GitHub Pages Site</h1>
+  <p>Click on any document below to view or download:</p>
 
   <ul>
-    <li><a href="class16questions.pdf" target="_blank">class16questions.pdf</a></li>
-    <li><a href="notes_week1.pdf" target="_blank">notes_week1.pdf</a></li>
-    <li><a href="results.html" target="_blank">results.html</a></li>
-    <li><a href="data_summary.pdf" target="_blank">data_summary.pdf</a></li>
-    <li><a href="report.docx" target="_blank">report.docx</a></li>
-    <!-- You can add more here -->
+    <li><a href="Class08.pdf" target="_blank">Class08.pdf</a></li>
+    <li><a href="Class11AlphaFold.pdf" target="_blank">Class11AlphaFold.pdf</a></li>
+    <li><a href="Class12.pdf" target="_blank">Class12.pdf</a></li>
+    <li><a href="Class13Deseq.pdf" target="_blank">Class13Deseq.pdf</a></li>
+    <li><a href="Class14miniproject.pdf" target="_blank">Class14miniproject.pdf</a></li>
+    <li><a href="Class16questions.pdf" target="_blank">Class16questions.pdf</a></li>
+    <li><a href="Class17.pdf" target="_blank">Class17.pdf</a></li>
+    <li><a href="Class18.pdf" target="_blank">Class18.pdf</a></li>
+    <li><a href="LabClass07.pdf" target="_blank">LabClass07.pdf</a></li>
+    <li><a href="LabClass10.pdf" target="_blank">LabClass10.pdf</a></li>
+    <li><a href="class19hw.pdf" target="_blank">class19hw.pdf</a></li>
+    <li><a href="lab01.pdf" target="_blank">lab01.pdf</a></li>
+    <li><a href="lab02 2.pdf" target="_blank">lab02 2.pdf</a></li>
+    <li><a href="lab03.pdf" target="_blank">lab03.pdf</a></li>
+    <li><a href="lab04-class.pdf" target="_blank">lab04-class.pdf</a></li>
+    <li><a href="labClass05.pdf" target="_blank">labClass05.pdf</a></li>
   </ul>
 </body>
 </html>
